# Capturist

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
docs/: contract-matrix.md  license-compliance.md
ffmpeg-windows/include/libavcodec/: avfft.h
ffmpeg-windows/lib/: avcodec-62.def  avfilter-11.def  avformat-62.def  avutil-60.def
ffmpeg-windows/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
scripts/: build-and-deploy.sh
src/: App.module.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/capture/: manager.rs  mod.rs  models.rs  provider.rs  runtime.rs
src-tauri/src/encoder/: audio_capture.rs  config.rs  consumer.rs  ffmpeg_paths.rs  mod.rs  output_paths.rs  processing_status.rs  video_encoder_status.rs
src-tauri/src/encoder/audio_capture/platform/: device_discovery.rs  dsp.rs  mux.rs  stub.rs  wasapi_capture.rs  windows.rs
src-tauri/src/region/: mod.rs  overlay_win.rs
src-tauri/src/shortcuts/: mod.rs
src/components/AdvancedSettingsModal/: AdvancedSettingsModal.module.css  AdvancedSettingsModal.tsx  index.ts
src/components/Alerts/: Alerts.module.css  Alerts.tsx  index.ts
src/components/CaptureControls/: CaptureControls.module.css  CaptureControls.tsx  index.ts
src/components/StatusPanel/: StatusPanel.module.css  StatusPanel.tsx  index.ts
src/components/TopBar/: TopBar.module.css  TopBar.tsx
src/hooks/useRecorderController/: index.ts  useRecorderController.ts  utils.ts
src/recorder/: Grabador.ts  index.ts  types.ts
src/region/: normalize.ts
src/shortcuts/: keyboard.ts
src/styles/: global.css
