[package]
name = "capturist"
version = "0.1.0"
description = "A Tauri App"
authors = ["xMunder"]
edition = "2021"

[lib]
name = "capturist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg-the-third = { version = "4.0.1", features = ["codec", "format", "filter", "software-scaling"] }
windows-capture = "=1.5.0"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi"] }
